samples/_failures_safe/1761308816_50f897_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23b2c15a.c: In function ‘main’:
./samples/SAFE/__tmp_23b2c15a.c:150:13: error: expected ‘:’ or ‘...’ at end of input
  150 |             case 2
      |             ^~~~
./samples/SAFE/__tmp_23b2c15a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23b2c15a.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_23b2c15a.c:150:13: error: expected declaration or statement at end of input
